Adds serverside pagination and sorting for auditlogs
