# application/common/types/api/audit-logs/index.ts
@@ -1,3 +1,3 @@
-import type { GetAllAuditLogsResponse } from './getAllAuditLogs'
+import type { GetAuditLogsResponse } from './getAuditLogs'
 
-export { GetAllAuditLogsResponse }
+export { GetAuditLogsResponse }
